# consensus-simulation

./: CLAUDE.md  Cargo.toml  README.md
src/: bus.rs  main.rs  node.rs  runner.rs  transformer.rs  types.rs
